<resources>
    <string name="app_name">Meal Mate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_content">solution for your meal problems</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="username">username</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">forget Password ?</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="skip"><u>skip</u></string>
    <string name="let_s_get_started">let\'s get started</string>
    <string name="do_you_follow_any_of_these_routines">do you follow any of these routines ?</string>
    <string name="name">name</string>
    <string name="choose_your_favourites">choose your favourites</string>
    <string name="do_you_have_any_allergies">do you have any allergies</string>
    <string name="settings">settings</string>
    <string name="meals">meals</string>
    <string name="favourites">favourites</string>
    <string name="schedule">schedule</string>
    <string name="good_morning">"Good morning "</string>
    <string name="dish_of_the_day">DISH OF THE DAY</string>
    <string name="type_in_your_favourite_dish">type in your favourite dish …</string>
    <string name="choose_your_meal">Meals for you</string>
    <string name="filters">Filters</string>
    <string name="select_country">select Country ?</string>
    <string name="select_ingredient">select Ingredient ?</string>
    <string name="select_category">select Category ?</string>
    <string name="instructions">Instructions</string>
    <string name="by_name">by name</string>
    <string name="by_country">by country</string>
    <string name="by_category">by category</string>
    <string name="by_ingredient">by ingredient</string>
    <string name="nationality_placeholder">what is your nationality ? … </string>
    <string name="category_placeholder">category of your meal ? …</string>
    <string name="ingredient_placeholder">your favourite ingredient ? …</string>
    <string name="breakfast">breakfast</string>
    <string name="launch">launch</string>
    <string name="dinner">dinner</string>
    <string name="ingredients">ingredients</string>
    <string name="ingredient">ingredient</string>
    <string name="category">category</string>
    <string name="country">country</string>
    <string name="transition_name">transitionName</string>
    <string name="meal">meal</string>
    <string name="email">email</string>
    <string name="welcome">"welcome "</string>
    <string name="something_went_wrong_with_your_credentials">something went wrong with your credentials</string>
    <string name="please_insert_valid_email">please insert valid email</string>
    <string name="your_password_should_have_number_capital_letter_small_letter_and_special_character">your password should have number, capital letter , small letter and special character</string>
    <string name="login_as_guest">login as guest ?</string>
    <string name="welcome_our_guest">welcome our guest</string>
    <string name="meal_added_successfully">meal added successfully</string>
    <string name="users">users</string>
    <string name="your_sync_is_done">your sync is done</string>
    <string name="delete">delete</string>
    <string name="meal_is_deleted_successfully">meal is deleted Successfully</string>
    <string name="type">type</string>
    <string name="usertype">userType</string>
    <string name="guest">guest</string>
    <string name="this_feature_is_for_registered_users_only_please_login_to_use_it">this feature is for registered users only please login to use it</string>
    <string name="presenter">presenter</string>
    <string name="unknown">Unknown</string>
    <string name="results">results</string>
    <string name="searchword">searchWord</string>
    <string name="searchtype">searchType</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="details">details</string>
    <string name="date">date</string>
    <string name="you_need_to_be_authenticated_to_do_this_action_please_login">you need to be authenticated to do this action please login</string>
    <string name="you_need_internet_to_login_as_guest">you need internet to login as guest</string>
<string name="web_id">804616878889-a5f90e5ou1j7j2dpa7ti1n2r7ilt8tg9.apps.googleusercontent.com</string>

    <string-array name="flag_urls">
        <item>https://www.worldometers.info/img/flags/us-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/uk-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ca-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ch-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/hr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/hr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/nl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/eg-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/fr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/gr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/in-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ei-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/it-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/jm-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ja-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/th-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ke-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/my-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mx-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mo-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/pl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/po-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/rs-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/sp-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/th-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ts-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/tu-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/vm-flag.gif</item>
    </string-array>
</resources>