<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".meals.mainmealsfragment.view.MealsFragment"
    android:background="@color/gray"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".meals.SearchFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vGuideline97.5percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vGuideline2.5percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025" />

    <TextView
        android:id="@+id/filtersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/filters"
        android:textStyle="bold"
        style="@style/title_font"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countryTextView"
        style="@style/title_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/select_country"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
        app:layout_constraintStart_toStartOf="@+id/filtersTextView"
        app:layout_constraintTop_toBottomOf="@+id/filtersTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/countriesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
        app:layout_constraintTop_toBottomOf="@+id/countryTextView" />


    <TextView
        android:id="@+id/ingredientsTextView"
        style="@style/title_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/select_ingredient"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
        app:layout_constraintStart_toStartOf="@+id/filtersTextView"
        app:layout_constraintTop_toBottomOf="@+id/countriesRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsTextView" />


    <TextView
        android:id="@+id/categoryTextView"
        style="@style/title_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/select_category"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
        app:layout_constraintStart_toStartOf="@+id/filtersTextView"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
        app:layout_constraintTop_toBottomOf="@+id/categoryTextView" />





</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>