<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".meals.mainmealsfragment.view.MealsFragment"
    android:background="@color/gray"
    android:fillViewport="true">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vGuideline97.5percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.975" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vGuideline2.5percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.025" />



        <TextView
            android:id="@+id/goodMorningTextView"
            style="@style/p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/good_morning"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchInputLayout"
            style="@style/searchStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_25sdp"
            app:errorEnabled="true"
            app:hintEnabled="false"

            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/goodMorningTextView"
            app:startIconDrawable="@drawable/search"
            app:startIconMinSize="@dimen/_30sdp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/font"
                style="@style/p2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/type_in_your_favourite_dish"
                android:drawableStart="@drawable/search"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/headerBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="goodMorningTextView,searchInputLayout"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/mealOfTheDayBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="mealOfTheDayCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/mealOfTheDayBarrier" />


        <TextView
            android:id="@+id/chooseYourMealTextView"
            style="@style/p1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/choose_your_meal"
            android:textColor="@color/semiBlack"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mealsRecycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/meal_item"
            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/chooseYourMealTextView" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:indeterminateTint="@color/orange"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/mealOfTheDayCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/gray"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintStart_toStartOf="@+id/vGuideline2.5percent"
            app:layout_constraintTop_toBottomOf="@+id/headerBarrier">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/dishOfTheDayTextView"
                    style="@style/title_font"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:text="@string/dish_of_the_day"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/aboutTextView"
                    style="@style/p2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Scrambeld Eggs Smoked Salmon"
                    android:textColor="@color/semiBlack"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/dishOfTheDayTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dishOfTheDayTextView" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/mealImage"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:elevation="1dp"
                    android:src="@drawable/meal"
                    android:transitionName="mealOfTheDay"
                    app:layout_constraintBottom_toBottomOf="@+id/aboutTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/dishOfTheDayTextView" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/plusMealImage"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/circle_shape_orange"
                    android:elevation="10dp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/add"
                    app:layout_constraintCircle="@+id/mealImage"
                    app:layout_constraintCircleAngle="130"
                    app:layout_constraintCircleRadius="@dimen/_50sdp"
                    app:layout_constraintStart_toEndOf="@+id/mealImage"
                    app:layout_constraintTop_toTopOf="@+id/mealImage" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoutImageView"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/logout"
            app:layout_constraintBottom_toBottomOf="@+id/goodMorningTextView"
            app:layout_constraintEnd_toStartOf="@+id/vGuideline97.5percent"
            app:layout_constraintTop_toTopOf="@+id/goodMorningTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>